--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -4,6 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DictionaryActivity">
+    tools:context=".DictionaryActivity"
+    android:background="@color/text_color_1">
+
+    <include
+        layout="@layout/back_button_layout"
+        android:id="@+id/backButton"/>
+
+    <EditText
+        android:id="@+id/searchEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
+        android:backgroundTint="#BDE8CA"
+        android:hint="@string/word_search"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        android:paddingVertical="6dp"
+        android:layout_marginHorizontal="24dp"
+        android:drawableStart="@drawable/ic_search_small"
+        android:drawablePadding="8dp"
+        android:paddingStart="17dp"
+        android:textColor="@color/search_word_color"
+        android:inputType="text">
+
+
+    </EditText>
+
+    <HorizontalScrollView
+        android:id="@+id/categoryScroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
+        android:paddingHorizontal="25dp"
+        android:layout_marginTop="20dp"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="A1" />
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="A2" />
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="B1" />
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="B2" />
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="C1" />
+
+            <CheckBox
+                style="@style/CheckButton"
+                android:text="C2" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="647dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/categoryScroll"
+        tools:listitem="@layout/item_word"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
