--- a/app/src/main/res/layout/activity_word_card.xml
+++ b/app/src/main/res/layout/activity_word_card.xml
@@ -5,23 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WordCardActivity"
-    android:background="@color/text_color_1"
-    android:padding="21dp">
+    android:background="@color/text_color_1">
 
-    <ImageButton
-        android:id="@+id/backButton"
-        android:layout_width="52dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="335dp"
-        android:background="@color/text_color_1"
-        android:contentDescription="@string/back_button"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_button" />
+    <include
+        layout="@layout/back_button_layout"
+        android:id="@+id/backButton"/>
 
     <ImageView
         android:id="@+id/wordImage"
