--- a/app/src/main/res/layout/activity_word_choose.xml
+++ b/app/src/main/res/layout/activity_word_choose.xml
@@ -50,7 +50,8 @@
 
     </RadioGroup>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
+        android:id="@+id/claimButton"
         android:text="@string/claim"
         style="@style/ActionButton"
         app:layout_constraintTop_toBottomOf="@+id/wordsGroup"
