--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,20 @@
         <item name="cornerRadius">30dp</item>
     </style>
 
+    <style name="CheckButton">
+
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@drawable/rounded_corner</item>
+        <item name="backgroundTint">@color/category</item>
+        <item name="android:textSize">30sp</item>
+
+        <item name="android:textColor">@color/text_color_1</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:layout_marginEnd">11dp</item>
+
+    </style>
+
 </resources>
